fix: main download button looks weird on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,7 +31,9 @@ div.center button {
     font-size: xx-large;
     font-weight: 900;
     width: 480px;
+    max-width: 100%;
     height: 64px;
+    min-height: fit-content;
 }
 
 div.center button > img {
